--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,4 +2,7 @@
 <p><%= @article.body %></p>
 <%=link_to "Delete", article_path(@article), method: :delete, data: {confirm: "really delete the article?"} %><br>
 <%=link_to "Edit", edit_article_path(@article) %><br>
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+<%= render partial: 'comments/form' %>
 <%=link_to "<<<Back to Articles List", articles_path %>
