--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,8 +5,13 @@
   <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p>
+<p>
+  <% if @article.image.exists? %>
+    <%= image_tag @article.image.url %>
+  <% end %>
+</p>
 <p><%= @article.body %></p>
-<%=link_to "Delete", article_path(@article), method: :delete, data: {confirm: "really delete the article?"} %><br>
+<%=link_to "Delete", article_path(@article), method: :delete, data: {confirm: "really delete the article?"} %>
 <%=link_to "Edit", edit_article_path(@article) %><br>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
